fixed scrollbar in profile page

--- a/src/pages/profilepage/style.css
+++ b/src/pages/profilepage/style.css
@@ -1,10 +1,3 @@
-.page-container {
-  min-height: 100vh;
-  border-radius: 15px;
-  color: white;
-  
-}
-
 .content-wrapper {
   display: flex;
   min-height: calc(100vh - 70px);
